Create parser component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
     </h1>
   </header>
 
+  <app-parser></app-parser>
 
-  <app-full-name></app-full-name>
+  <!-- <app-full-name></app-full-name> -->
 </div>
 
 
