--- a/src/app/full-name/full-name.component.html
+++ b/src/app/full-name/full-name.component.html
@@ -1,23 +1,7 @@
 <div class="card-deck">
-  <div class="card main-card">
-    <div class="card-header">
-      Parser
-    </div>
-    <div class="card-body">
-      <form>
-        <div class="form-group">
-          <label for="fullName">Enter your full name:</label>
-          <input type="text" class="form-control" id="fullName" placeholder="full name">
-        </div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
-      </form>
-
-    </div>
-  </div>
-
   <div class="card" *ngIf="false">
     <div class="card-header">
-      Parsered Name
+      Parsered Names
     </div>
     <div class="card-body">
 
