Add parsing service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     </h1>
   </header>
 
-  <app-parser></app-parser>
+  <router-outlet></router-outlet>
+
+  <app-parser-results></app-parser-results>
 </div>
 
-
-<router-outlet></router-outlet>
