--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <header>
-    <h1>
+    <h1 class="display-4">
       {{ title }}
     </h1>
   </header>
 
   <router-outlet></router-outlet>
-
-  <app-parser-results></app-parser-results>
 </div>
 
