--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 header{
     text-align: center;
-    border-bottom: 1px solid lightgray;
-    
+    border: 0;
+    border-bottom: 14px solid rgba(0,0,0,.16);
     margin-bottom: 2.5rem;
 
     h1{
