--- a/src/app/components/parser-results/parser-results.component.html
+++ b/src/app/components/parser-results/parser-results.component.html
@@ -1,7 +1,6 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid py-3">
 
-  <h1 class="display-4 p-1 mb-1 parser-result-header">Parser Results</h1>
-  <hr class="my-4">
+  <h1 class="display-4 p-1 mb-3 parser-result-header">Parser Results</h1>
 
   <div class="container">
     <div class="card-deck p-1">
