--- a/src/app/components/parser-results/parser-results.component.html
+++ b/src/app/components/parser-results/parser-results.component.html
@@ -10,7 +10,7 @@
             Parsed Name
           </div>
 
-          <div class="card-body">
+          <div class="card-body crd-body">
             <div class="info">
               <dl class="row">
                 <dt class="col-sm-6">Prefix</dt>
@@ -39,7 +39,7 @@
             </div>
 
 
-            <button type="button" class="btn btn-outline-dark btn-lg btn-block">Delete</button>
+            <button type="button" (click)="delete(name)" class="btn btn-outline-dark btn-lg btn-block">Delete</button>
           </div>
 
         </div>
